[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/particles/WheatParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/dynamic/character_gui.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/game/characters/Character.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/temp/vision_cone_gradient.png" type="Texture" id=4]
[ext_resource path="res://src/game/audio/AudioDetector.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.827451, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "armed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.125, 2.17053 )

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[sub_resource type="CircleShape2D" id=6]
radius = 250.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.67549, 1.20794 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 1.5 )

[node name="Character" type="KinematicBody2D"]
use_parent_material = true
collision_layer = 2
collision_mask = 8
script = ExtResource( 3 )

[node name="GUI" type="Control" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AboveHead" type="VBoxContainer" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -67.1022
margin_right = 15.0
margin_bottom = -39.1022
grow_horizontal = 2
grow_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_expander" type="Control" parent="GUI/AboveHead"]
margin_right = 29.0
margin_bottom = 5.0
size_flags_vertical = 3

[node name="HPBar" type="ProgressBar" parent="GUI/AboveHead"]
margin_top = 9.0
margin_right = 29.0
margin_bottom = 15.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 6 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
value = 2.16
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="GUI/AboveHead"]
margin_top = 19.0
margin_right = 29.0
margin_bottom = 28.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "<n>"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
offset = Vector2( 0, -37 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.264851 )
scale = Vector2( 1, 0.36 )
shape = SubResource( 4 )

[node name="UseRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseRange"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="AttackRange"]
polygon = PoolVector2Array( -5, -10, 6.74211, -20.1759, 21.3349, -27.3233, 20.494, 30.2782, 6.21239, 22.7324, -5, 10 )

[node name="SeeRange" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="SeeRange"]
polygon = PoolVector2Array( -5, -10, 7.80157, -21.2354, 41.7044, -36.5976, 41.1747, 41.273, 7.80157, 24.3215, -5, 10 )

[node name="VisionCone" type="Polygon2D" parent="SeeRange"]
modulate = Color( 1, 1, 1, 0.784314 )
z_index = 10
texture = ExtResource( 4 )
texture_offset = Vector2( 90, 0 )
texture_scale = Vector2( 0.5, 1 )
polygon = PoolVector2Array( 0, 0, 40, -40, 40, 40 )

[node name="HearRange" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HearRange"]
shape = SubResource( 6 )

[node name="FootRange" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootRange"]
shape = SubResource( 7 )

[node name="WheatRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheatRange"]
shape = SubResource( 8 )

[node name="LineOfSightRay" type="RayCast2D" parent="."]
visible = false
enabled = true
collision_mask = 12

[node name="NavpathUpdateDelay" type="Timer" parent="."]

[node name="InterruptsContainer" type="Node" parent="."]

[node name="SFX" type="Node2D" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="SFX"]
bus = "SFX"

[node name="Death" type="AudioStreamPlayer2D" parent="SFX"]
bus = "SFX"

[node name="TakeDamage" type="AudioStreamPlayer2D" parent="SFX"]
bus = "SFX"

[node name="Movement" type="AudioStreamPlayer2D" parent="SFX"]
bus = "SFX"

[node name="DamageTakeTween" type="Tween" parent="."]

[node name="WheatParticles" parent="." instance=ExtResource( 1 )]

[node name="AudioDetector" parent="." instance=ExtResource( 5 )]

[node name="Shadow" type="Node2D" parent="."]
visible = false
